# src/main/resources/static/openapi/exercise.yaml
@@ -58,9 +58,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TeacherForStudentResponse'
+                $ref: '#/components/schemas/TeachersForStudentResponse'
 
   /v1/student/teachers/{teacherId}/availabilities:
     get:
@@ -81,16 +79,14 @@ paths:
           required: true
           schema:
             type: string
-            example: '2025-W16'
+            example: '2025-W20'
       responses:
         '200':
           description: Teacher's availability for the given week
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TeacherAvailabilityResponse'
+                $ref: '#/components/schemas/TeacherAvailabilitiesResponse'
 
   /v1/student/schedules:
     post:
@@ -109,32 +105,38 @@ paths:
       responses:
         '201':
           description: Class scheduled
+    
+  /v1/student/schedules/upcoming:
     get:
-      summary: List scheduled classes
-      operationId: listScheduledClasses
+      summary: List upcoming scheduled classes
+      operationId: listUpcomingScheduledClasses
       tags:
         - Student
       security:
         - bearerAuth: []
-      parameters:
-        - in: query
-          name: isPast
-          required: false
-          schema:
-            type: boolean
-            default: false
-          description: |
-            - `true`: returns classes before today.
-            - `false`: returns classes on or after today.
       responses:
         '200':
-          description: List of schedules
+          description: List of upcoming schedules
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ScheduledClassResponse'
+                $ref: '#/components/schemas/ScheduledClassesResponse'
+
+  /v1/student/schedules/past:
+    get:
+      summary: List past scheduled classes
+      operationId: listPastScheduledClasses
+      tags:
+        - Student
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of past schedules
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ScheduledClassesResponse'
 
   /v1/student/schedules/{scheduleId}:
     delete:
@@ -186,7 +188,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/StudentPointsRecordsResponse'
 
-  /v1/teacher/availability/recurring:
+  /v1/teacher/availabilities/recurring:
     post:
       summary: Add a recurring availability slot
       operationId: addTeacherRecurringAvailability
@@ -203,7 +205,7 @@ paths:
         '201':
           description: Slot added
     get:
-      summary: List teacher's recurring availability
+      summary: List upcoming recurring availability slots
       operationId: listTeacherRecurringAvailabilities
       tags:
         - Teacher
@@ -215,11 +217,9 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TeacherRecurringAvailabilityResponse'
+                $ref: '#/components/schemas/TeacherRecurringAvailabilitiesResponse'
 
-  /v1/teacher/availability/recurring/{recurringId}:
+  /v1/teacher/availabilities/recurring/{recurringId}:
     delete:
       summary: Delete a recurring availability slot
       operationId: deleteTeacherRecurringAvailability
@@ -237,7 +237,7 @@ paths:
         '204':
           description: Slot deleted
 
-  /v1/teacher/availability/exceptions:
+  /v1/teacher/availabilities/exception:
     post:
       summary: Add an availability exception
       operationId: addTeacherExceptionAvailability
@@ -266,11 +266,9 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TeacherExceptionAvailabilityResponse'
+                $ref: '#/components/schemas/TeacherExceptionAvailabilitiesResponse'
 
-  /v1/teacher/availability/exceptions/{exceptionId}:
+  /v1/teacher/availabilities/exception/{exceptionId}:
     delete:
       summary: Delete an availability exception
       operationId: deleteTeacherExceptionAvailability
@@ -288,7 +286,7 @@ paths:
         '204':
           description: Exception deleted
 
-  /v1/teacher/unavailable-dates:
+  /v1/teacher/availabilities/unavailable:
     post:
       summary: Add an unavailable date
       operationId: addTeacherUnavailableDate
@@ -317,11 +315,9 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TeacherUnavailableDateResponse'
+                $ref: '#/components/schemas/TeacherUnavailableDatesResponse'
 
-  /v1/teacher/unavailable-dates/{unavailableDateId}:
+  /v1/teacher/availabilities/unavailable/{unavailableDateId}:
     delete:
       summary: Delete an unavailable date
       operationId: deleteTeacherUnavailableDate
@@ -427,9 +423,8 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TeacherForAdminResponse'
+                $ref: '#/components/schemas/TeachersForAdminResponse'
+                  
 
   /v1/admin/teachers/{teacherId}:
     delete:
@@ -518,7 +513,7 @@ components:
     StudentPointsRecordsResponse:
       type: object
       properties:
-        records:
+        pointsRecords:
           type: array
           items:
             $ref: '#/components/schemas/StudentPointsRecordResponse'
@@ -548,6 +543,14 @@ components:
           type: integer
           default: 0
 
+    TeachersForStudentResponse:
+      type: object
+      properties:
+        teachers:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherForStudentResponse'
+
     TeacherForStudentResponse:
       type: object
       properties:
@@ -555,6 +558,14 @@ components:
           type: integer
         name:
           type: string
+
+    TeachersForAdminResponse:
+      type: object
+      properties:
+        teachers:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherForAdminResponse'
 
     TeacherForAdminResponse:
       type: object
@@ -580,6 +591,14 @@ components:
           type: string
         email:
           type: string
+
+    TeacherAvailabilitiesResponse:
+      type: object
+      properties:
+        teacherAvailabilities:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherAvailabilityResponse'
 
     TeacherAvailabilityResponse:
       type: object
@@ -609,6 +628,14 @@ components:
           type: string
           format: time
 
+    TeacherRecurringAvailabilitiesResponse:
+      type: object
+      properties:
+        recurringAvailabilities:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherRecurringAvailabilityResponse'
+
     TeacherRecurringAvailabilityResponse:
       type: object
       properties:
@@ -637,6 +664,14 @@ components:
           type: string
           format: time
 
+    TeacherExceptionAvailabilitiesResponse:
+      type: object
+      properties:
+        exceptionAvailabilities:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherExceptionAvailabilityResponse'
+
     TeacherExceptionAvailabilityResponse:
       type: object
       properties:
@@ -658,6 +693,14 @@ components:
           type: string
           format: date
 
+    TeacherUnavailableDatesResponse:
+      type: object
+      properties:
+        unavailableDates:
+          type: array
+          items:
+            $ref: '#/components/schemas/TeacherUnavailableDateResponse'
+
     TeacherUnavailableDateResponse:
       type: object
       properties:
@@ -678,6 +721,14 @@ components:
         startTime:
           type: string
           format: time
+
+    ScheduledClassesResponse:
+      type: object
+      properties:
+        scheduledClasses:
+          type: array
+          items:
+            $ref: '#/components/schemas/ScheduledClassResponse'
 
     ScheduledClassResponse:
       type: object
